--- a/ansible/roles/master/tasks/nginx.yml
+++ b/ansible/roles/master/tasks/nginx.yml
@@ -1,38 +1,65 @@
 ---
-- name: Install nginx
-  apt: pkg={{ item }} state=present
+##
+## APT DEPENDENCIES
+##
+- name: nginx | Install nginx
+  apt:
+    pkg: "{{ item }}"
+    state: present
   with_items:
     - nginx
 
-- name: Install nginx.conf
-  copy: src=sadm/nginx/nginx.conf dest=/etc/nginx/nginx.conf mode=0444 backup=yes
+##
+## NGINX
+##
+- name: nginx | Install nginx.conf
+  copy:
+    src: sadm/nginx/nginx.conf
+    dest: /etc/nginx/nginx.conf
+    mode: 0444
+    backup: yes
 
-- name: Specify nginx pid location
-  lineinfile: dest=/etc/nginx/nginx.conf state=present insertbefore=BOF line="pid /run/nginx.pid;"
+- name: nginx | Specify nginx pid location
+  lineinfile:
+    dest: /etc/nginx/nginx.conf
+    state: present
+    insertbefore: BOF
+    line: "pid /run/nginx.pid;"
 
-# arch default is http. ubuntu is www-data
-- name: Change nginx user
-  lineinfile: dest=/etc/nginx/nginx.conf state=present regexp="^user http;" line="user www-data;"
+- name: nginx | Change nginx user
+  lineinfile:
+    dest: /etc/nginx/nginx.conf
+    state: present
+    regexp: "^user http;"
+    line: "user www-data;"
 
-- name: Link nginx log location
-  file: src=/var/log/nginx dest=/usr/share/nginx/logs state=link
+- name: nginx | Link nginx log location
+  file:
+    src: /var/log/nginx
+    dest: /usr/share/nginx/logs
+    state: link
 
-- name: Create nginx services area
+- name: nginx | Create nginx services area
   command: mkdir /etc/nginx/services
   args:
     creates: /etc/nginx/services
 
-- name: Create nginx SSL area
-  command: mkdir -p /etc/nginx/ssl
-  args:
-    creates: /etc/nginx/ssl
+- name: nginx | Create nginx SSL area
+  file:
+    path: /etc/nginx/ssl
+    mode: 0755
+    state: directory
+    recurse: yes
 
-- name: Create Self-Signed SSL certificate
-  shell: "openssl req -newkey rsa:2048 -new -nodes -x509 -days 3650 -keyout dolphin-emu.key -out dolphin-emu.pem -subj '/CN=*.dev'"
+- name: nginx | Create Self-Signed SSL certificate
+  command: "openssl req -newkey rsa:2048 -new -nodes -x509 -days 3650 -keyout dolphin-emu.key -out dolphin-emu.pem -subj '/CN=*.dev'"
   args:
     chdir: /etc/nginx/ssl
     creates: /etc/nginx/ssl/dolphin-emu.pem
 
-- name: Start nginx
-  service: name=nginx state=started enabled=yes
+- name: nginx | Start nginx
+  service:
+    name: nginx
+    state: started
+    enabled: yes
 
