Restart supervisord after configuration change.
If the configuration of supervisor for supervised programs is changed (e.g. by
addition to /etc/supervisor), then restart supervisord.

If the configuration of a supervised program is changed (e.g. by modification of
a settings file in the application directory), then restart the program with
supervisorctl.

--- a/ansible/roles/master/handlers/main.yml
+++ b/ansible/roles/master/handlers/main.yml
@@ -4,6 +4,11 @@
     name: nginx
     state: restarted
 
+- name: restart supervisor
+  service:
+    name: supervisor
+    state: restarted
+
 - name: restart fifoci supervisor
   supervisorctl:
     name: gunicorn_fifoci
