--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -8,3 +8,8 @@
 - include: common_Windows.yml tags=common,windows
   when: ansible_os_family == 'Windows'
 
+##
+## HOSTS
+##
+- include: hosts.yml
+
