--- a/ansible/roles/slave/tasks/w_git.yml
+++ b/ansible/roles/slave/tasks/w_git.yml
@@ -1,37 +1,16 @@
 ---
-# Get the installer either from the cache or from an external source.
-# Cache it if it was fetched externally.
-- name: Is file cached?
-  win_stat: path="{{ cache_location }}/{{ file }}"
-  register: file_cached
+- include: windows_cache_download.yml
 
-- name: Copy cached file to download area
-  raw: "copy {{ cache_location }}\\{{ file }} {{ download_location }}\\{{ file }}"
-  when: file_cached.stat.exists
-
-- name: Is file downloaded?
-  win_stat: path="{{ download_location }}/{{ file }}"
-  register: file_downloaded
-
-- name: Download file
-  win_get_url:
-    url: "{{ base_url }}/{{ file }}"
-    dest: "{{ download_location }}/{{ file }}"
-  when: not file_downloaded.stat.exists
-
-- name: Copy download file to cache
-  raw: "copy {{ download_location }}\\{{ file }} {{ cache_location }}\\{{ file }}"
-  when: not file_cached.stat.exists
-
-# Install application if not already installed
-- name: Is git installed?
-  win_stat: path='C:\Program Files (x86)\Git'
+- name: git | Installed?
+  win_stat:
+    path: "C:\\Program Files (x86)\\Git"
   register: app
 
-- name: Install git
+- name: git | Install
   raw: "{{ download_location }}\\{{ file }} /SILENT"
   when: not app.stat.exists
 
-- name: Add git to path
+- name: git | Add to path
   raw: "powershell [Environment]::SetEnvironmentVariable('Path', $env:Path + ';C:\\Program Files (x86)\\Git\\bin', [EnvironmentVariableTarget]::Machine)"
   when: not app.stat.exists
+
