--- a/ansible/roles/slave/tasks/slave_Darwin.yml
+++ b/ansible/roles/slave/tasks/slave_Darwin.yml
@@ -14,21 +14,17 @@
     regexp: "^github\\.com"
 
 ##
-## PIP
-##
-- name: Install pip
-  sudo: yes
-  easy_install: name=pip
-
-##
 ## HOMEBREW
 ##
 - name: Check homebrew installation
-  stat: path=/usr/local/bin/brew
+  stat:
+    path: /usr/local/bin/brew
   register: brew_exec
 
 - name: Get homebrew installer
-  copy: src=homebrew/install dest=~/install_homebrew
+  copy:
+    src: homebrew/install
+    dest: ~/install_homebrew
   when: not brew_exec.stat.exists
 
 - name: Install homebrew
@@ -36,10 +32,14 @@
   when: not brew_exec.stat.exists
 
 - name: Update brew cache and upgrade
-  homebrew: update_homebrew=yes upgrade_all=yes
+  homebrew:
+    update_homebrew: yes
+    upgrade_all: yes
 
 - name: Install cmake
-  homebrew: state=present name={{ item }}
+  homebrew:
+    name: "{{ item }}"
+    state: present
   with_items:
     - cmake
 
@@ -58,23 +58,34 @@
   sudo: yes
 
 ##
-## BUILDBOT
+## PIP
 ##
 # sudo to install because on osx this playbook is not run as root
+- name: Install pip
+  sudo: yes
+  easy_install:
+    name: pip
+
 - name: Install buildbot slave
   sudo: yes
-  pip: name=buildbot-slave executable=/usr/local/bin/pip
+  pip:
+    executable: /usr/local/bin/pip
+    name: buildbot-slave
 
+##
+## BUILDBOT
+##
 - name: Create build slave
-  shell: /usr/local/bin/buildslave create-slave . {{ buildmaster_host }}:{{ buildmaster_port }} {{ slave_username }} {{ slave_password }}
+  shell: "/usr/local/bin/buildslave create-slave . {{ buildmaster_host }}:{{ buildmaster_port }} {{ slave_username }} {{ slave_password }}"
   args:
     creates: buildbot.tac
 
 - name: Update slave admin information
-  template: src=buildbot_info_admin.j2 dest=info/admin
+  template:
+    src: buildbot_info_admin.j2
+    dest: info/admin
 
 # Ignore errors in case the master is not yet started
-# This should use the service module if supported on OSX.
 - name: Start slave (non-service)
   shell: "nohup nice /usr/local/bin/buildslave restart"
   ignore_errors: True
