--- a/ansible/roles/slave/tasks/slave_Windows.yml
+++ b/ansible/roles/slave/tasks/slave_Windows.yml
@@ -60,7 +60,14 @@
     tags: wdk
 
 ##
-## BUILDBOT
+## PIP DEPENDENCIES
+##
+# http://trac.buildbot.net/wiki/RunningBuildbotOnWindows
+- name: Install buildslave
+  raw: "pip install buildbot-slave"
+
+##
+## BUILDBOT DEPLOY
 ##
 # Without the ability to change users in windows, this makes tasks harder than
 # they should be to create. Given the incompleteness of features on windows,
@@ -72,16 +79,17 @@
 #     state: present
 
 - name: Is buildbot area present?
-  win_stat: path="c:\\{{ buildbot_username }}"
+  win_stat:
+    path: "c:\\{{ buildbot_username }}"
   register: buildbot_area
 
 - name: Create buildbot area
   raw: "mkdir c:\\{{ buildbot_username }}"
   when: not buildbot_area.stat.exists
 
-# http://trac.buildbot.net/wiki/RunningBuildbotOnWindows
-- name: Install buildslave
-  raw: "pip install buildbot-slave"
+- name: Install buildbot symbol store utility
+  raw: "copy c:\\vagrant\\ansible\\roles\\slave\\files\\storesymbols.bat c:\\buildbot\\storesymbols.bat"
+  when: not buildbot_area.stat.exists
 
 - name: Create build slave
   raw: "buildslave create-slave c:\\{{ buildbot_username }} {{ buildmaster_host }}:{{ buildmaster_port }} {{ slave_username }} {{ slave_password }}"
@@ -105,6 +113,9 @@
 - name: Set buildbot service registry entries (2)
   raw: "powershell New-ItemProperty -path Registry::HKEY_LOCAL_MACHINE\\SYSTEM\\CurrentControlSet\\services\\Buildbot\\Parameters -Name directories -PropertyType String -Value C:\\{{ buildbot_username }}"
 
+##
+## SYMBOLSTORE
+##
 # The sadm/symbols/storesymbols.bat utility assumes that the symbols area is
 # mapped to Z:\, but this is difficult or impossible to map to a folder, shared
 # folder, or network host folder in Windows without having an actual real person
@@ -119,7 +130,8 @@
 # anyway. Since there is no need for remote access to the symbol store as any
 # Windows development would be done locally, this is not a great loss.
 - name: Is symbol area present?
-  win_stat: path="c:\\symbols"
+  win_stat:
+    path: "c:\\symbols"
   register: symbol_area
 
 - name: Create symbol store folder
@@ -130,17 +142,15 @@
   raw: "mkdir c:\\localsymbols"
   when: not symbol_area.stat.exists
 
-- name: Install buildbot symbol store utility
-  raw: "copy c:\\vagrant\\ansible\\roles\\slave\\files\\storesymbols.bat c:\\buildbot"
-  when: not symbol_area.stat.exists
-
 # https://randomascii.wordpress.com/2013/03/09/symbols-the-microsoft-way/
 # https://msdn.microsoft.com/en-us/library/windows/hardware/ff537994%28v=vs.85%29.aspx
 - name: Add symbol store to path
   raw: powershell [Environment]::SetEnvironmentVariable('_NT_SYMBOL_PATH', 'srv*c:\localsymbols*c:\symbols*https://msdl.microsoft.com/download/symbols', [EnvironmentVariableTarget]::Machine)
   when: not symbol_area.stat.exists
 
-# All dependencies are done. Start the build slave.
+##
+## BUILDBOT
+##
 - name: Start build slave
   win_service:
     name: BuildBot
