--- a/ansible/roles/slave/tasks/w_python.yml
+++ b/ansible/roles/slave/tasks/w_python.yml
@@ -1,38 +1,18 @@
 ---
-# Get the installer either from the cache or from an external source.
-# Cache it if it was fetched externally.
-- name: Is file cached?
-  win_stat: path="{{ cache_location }}/{{ file }}"
-  register: file_cached
+- include: windows_cache_download.yml
 
-- name: Copy cached file to download area
-  raw: "copy {{ cache_location }}\\{{ file }} {{ download_location }}\\{{ file }}"
-  when: file_cached.stat.exists
-
-- name: Is file downloaded?
-  win_stat: path="{{ download_location }}/{{ file }}"
-  register: file_downloaded
-
-- name: Download file
-  win_get_url:
-    url: "{{ base_url }}/{{ file }}"
-    dest: "{{ download_location }}/{{ file }}"
-  when: not file_downloaded.stat.exists
-
-- name: Copy download file to cache
-  raw: "copy {{ download_location }}/{{ file }} {{ cache_location }}/{{ file }}"
-  when: not file_cached.stat.exists
-
-# Install application if not already installed
-- name: Is python installed?
-  win_stat: path='C:\Python27'
+- name: python | Installed?
+  win_stat:
+    path: "C:\\Python27"
   register: app
 
-- name: Install python
-  win_msi: path={{ download_location }}\{{ file }} state=present
+- name: python | Install
+  win_msi:
+    path: "{{ download_location }}\\{{ file }}"
+    state: present
   when: not app.stat.exists
 
-- name: Add python to path
+- name: python | Add to path
   raw: "powershell [Environment]::SetEnvironmentVariable('Path', $env:Path + ';C:\\Python27;C:\\Python27\\Scripts', [EnvironmentVariableTarget]::Machine)"
   when: not app.stat.exists
 
