Use postgresql for buildmaster and fifoci.
Move back closer towards dolphin-emu set up.

--- a/ansible/roles/master/handlers/main.yml
+++ b/ansible/roles/master/handlers/main.yml
@@ -18,3 +18,9 @@
   supervisorctl:
     name: central
     state: restarted
+
+- name: restart postgresql
+  service:
+    name: postgresql
+    state: restarted
+
