--- a/ansible/roles/master/tasks/master.yml
+++ b/ansible/roles/master/tasks/master.yml
@@ -1,4 +1,5 @@
 ---
+- include: database.yml tags=database
 - include: nginx.yml tags=nginx
 - include: buildmaster.yml tags=buildbot
 - include: central.yml tags=central
