--- a/ansible/roles/slave/tasks/slave_Debian.yml
+++ b/ansible/roles/slave/tasks/slave_Debian.yml
@@ -101,6 +101,18 @@
   when: ansible_distribution == 'Debian'
 
 ##
+## FIFOCI
+##
+- include: fifoci.yml tags=slave,buildbot,fifoci
+  when: ansible_hostname in groups['fifoci']
+
+##
+## DPKG
+##
+- include: dpkg.yml tags=slave,dpkg
+  when: ansible_hostname in groups['dpkg']
+
+##
 ## BUILDBOT
 ##
 - name: Install buildbot-slave
