--- a/ansible/roles/master/tasks/nginx.yml
+++ b/ansible/roles/master/tasks/nginx.yml
@@ -13,11 +13,7 @@
 ## NGINX
 ##
 - name: nginx | Install nginx.conf
-  copy:
-    src: sadm/nginx/nginx.conf
-    dest: /etc/nginx/nginx.conf
-    mode: 0444
-    backup: yes
+  shell: cp ~/sadm/nginx/nginx.conf /etc/nginx/nginx.conf
 
 - name: nginx | Specify nginx pid location
   lineinfile:
